Change name of checkBox, and description

--- a/popup.html
+++ b/popup.html
@@ -5,12 +5,13 @@
     <script src="popup.js">	console.log("SSSSS")</script>
   </head>
   <body>
-    <h1>Click Para preencher o sig@ automaticamente</h1>
-    <button id="checkPage">Veja o Video</button>
-    <form action="">
+    <h1>Autosig@</h1>
+    <button id="checkPage">Click Aqui! </button>
+    
 
 	<p id="fillSiga"></p>
-	<input type="checkbox" name="fill_siga_checkBox" value="fill_siga">Click para preencher o siga automaticamente<br>
-	
+  <input type="checkbox" id="checkS" value="fill_siga">Kiev Gama<br> </input>
+  <input type="checkbox" id="checkBand" value="fill_siga">Gabriel Bandeira<br> </input>
+
   </body>
 </html>
