--- a/popup.html
+++ b/popup.html
@@ -2,16 +2,17 @@
 <html>
   <head>
     <title>Presence</title>
-    <script src="popup.js">	console.log("SSSSS")</script>
+    <script src="popup.js"></script>
   </head>
   <body>
     <h1>Autosig@</h1>
-    <button id="checkPage">Click Aqui! </button>
+    <button id="pagebutton">Click Aqui! </button>
     
 
 	<p id="fillSiga"></p>
   <input type="checkbox" id="checkS" value="fill_siga">Kiev Gama<br> </input>
   <input type="checkbox" id="checkBand" value="fill_siga">Gabriel Bandeira<br> </input>
+  <input type="checkbox" id="checkBand" value="fill_siga">Cris Bandeira<br> </input>
 
   </body>
 </html>
