--- a/popup.html
+++ b/popup.html
@@ -7,6 +7,7 @@
   <body>
     <h1>Autosig@</h1>
     <button id="pagebutton">Click Aqui! </button>
+    <button id="Band">Band It! </button>
     
 
 	<p id="fillSiga"></p>
