Adding exemple of json

--- a/popup.html
+++ b/popup.html
@@ -3,6 +3,7 @@
   <head>
     <title>Presence</title>
     <script src="popup.js"></script>
+    <script src="ex.js"></script>
   </head>
   <body>
     <h1>Autosig@</h1>
