new version of popup html

--- a/popup.html
+++ b/popup.html
@@ -7,14 +7,12 @@
   </head>
   <body>
     <h1>Autosig@</h1>
-    <button id="pagebutton">Click Aqui! </button>
-    <button id="Band">Band It! </button>
-    
-
-	<p id="fillSiga"></p>
-  <input type="checkbox" id="checkS" value="fill_siga">Kiev Gama<br> </input>
-  <input type="checkbox" id="checkBand" value="fill_siga">Gabriel Bandeira<br> </input>
-  <input type="checkbox" id="checkBand" value="fill_siga">Cris Bandeira<br> </input>
+    <textarea rows="1" cols="11" maxlength="11" name="CPF" required autofocus>CPF</textarea>
+    <button id="CPF">Ok!</button>
+    <select>
+      <option value="data">Data</option>
+    </select>
+    <input type="submit">
 
   </body>
 </html>
