--- a/popup.html
+++ b/popup.html
@@ -4,15 +4,22 @@
     <title>Presence</title>
     <script src="popup.js"></script>
     <script src="ex.js"></script>
+    <link rel="stylesheet" type="text/css" href="popup.css">
   </head>
   <body>
-    <h1>Autosig@</h1>
-    <textarea rows="1" cols="11" maxlength="11" name="CPF" required autofocus>CPF</textarea>
-    <button id="CPF">Ok!</button>
-    <select>
-      <option value="data">Data</option>
-    </select>
-    <input type="submit">
+  <html style="min-width:190px;">
+  <h1>Autosig@</h1>
+  
+
+  
+  <textarea rows="1" cols="11" maxlength="11" name="CPF" required autofocus>CPF</textarea>
+  <button id="CPF">Ok!</button>
+
+    
+  <select id="data_fild">
+    <option value="data">Data</option>
+  </select>
+  <input type="submit">
 
   </body>
 </html>
