Remove useless code, and change ID of the button

--- a/popup.html
+++ b/popup.html
@@ -14,7 +14,7 @@
   <select id="data_fild">
     <option value="data">Data</option>
   </select>
-  <button id="CPF">Ok!</button>
+  <button id="RequestJson">Ok!</button>
 
   </body>
 </html>
