Now the GET request get CPF from textarea

--- a/popup.html
+++ b/popup.html
@@ -9,10 +9,12 @@
   <html style="min-width:190px;">
   <h1>Autosig@</h1>
   
-  <textarea rows="1" cols="11" maxlength="11" name="CPF" required autofocus>CPF</textarea>
+  <textarea id="cpf_value" rows="1" cols="11" maxlength="11" required autofocus>3</textarea>
 
   <select id="data_fild">
     <option value="data">Data</option>
+    <option value="1">Aula 1</option>
+    <option value="2">Aula 2</option>
   </select>
   <button id="RequestJson">Ok!</button>
 
