--- a/popup.html
+++ b/popup.html
@@ -17,6 +17,7 @@
     <option value="2">Aula 2</option>
   </select>
   <button id="RequestJson">Ok!</button>
+  <button id="RequestJsonRaw">Raw</button>
 
   </body>
 </html>
