Adding view of all students

--- a/popup.html
+++ b/popup.html
@@ -11,9 +11,7 @@
   
   <textarea id="cpf_value" rows="1" cols="11" maxlength="11" required autofocus>3</textarea>
 
-  <select id="data_fild">
-
-  </select>
+  <select id="data_fild"></select>
   <button id="RequestJson">Ok!</button>
   <button id="RequestJsonRaw">Raw</button>
 
