Adding visualization of the list in the popup

--- a/popup.html
+++ b/popup.html
@@ -14,6 +14,9 @@
   <select id="data_fild"></select>
   <button id="RequestJson">Ok!</button>
   <button id="RequestJsonRaw">Raw</button>
+  <p>
+  
+  <ul id="stdList"></ul>
 
   </body>
 </html>
