stylish changes on select

--- a/popup.html
+++ b/popup.html
@@ -7,14 +7,17 @@
   </head>
   <body>
   <html style="min-width:190px;">
-  <h1>Autosig@</h1>
+  <h1>PresenceSig@</h1>
   
-  <textarea id="cpf_value" rows="1" cols="11" maxlength="11" required autofocus>3</textarea>
+  <textarea id="cpf_value" rows="1" cols="11" maxlength="11" required autofocus></textarea>
 
-  <select id="data_fild"></select>
   <button id="RequestJson">Ok!</button>
   <button id="RequestJsonRaw">Raw</button>
   <p>
+  <select id="data_fild"></select>
+  
+  <p>
+
   
   <ul id="stdList"></ul>
 
