removing raw button for presenttion

--- a/popup.html
+++ b/popup.html
@@ -12,7 +12,8 @@
   <textarea id="cpf_value" rows="1" cols="11" maxlength="11" required autofocus></textarea>
 
   <button id="RequestJson">Ok!</button>
-  <button id="RequestJsonRaw">Raw</button>
+  <!-- <button id="RequestJsonRaw">Raw</button> 
+   !-->
   <p>
   <select id="data_fild"></select>
   
